--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,10 @@ node_js:
   - "8.6.0"
 before_install:
   - pip install --user codecov
+install:
+  - npm install
 after_success:
   - codecov --file coverage/lcov.info --disable search
+cache:
+  directories:
+    - "node_modules"
