--- a/package.json
+++ b/package.json
@@ -2,20 +2,23 @@
   "name": "rowser",
   "version": "0.2.0",
   "description": "An experimental generator-based browser/os/bot detector with proxied API",
-  "main": "index.js",
+  "main": "lib/rowser.js",
   "scripts": {
     "appveyor:test": "node node_modules\\mocha\\bin\\mocha --max-old-space-size=4096 ./__tests__",
     "benchmark": "node ./benchmark/index.js",
     "build": "rollup -c",
     "build:open": "node ./scripts/index-page-open.js",
-    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha ./__tests__",
-    "coverage:open": "node ./scripts/coverage-report-open.js",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
+    "cover": "node --max-old-space-size=4096 --harmony ./node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- ./__tests__",
+    "cover:min": "node --max-old-space-size=4096 --harmony ./node_modules/istanbul/lib/cli.js cover --report lcovonly node_modules/mocha/bin/_mocha -- ./__tests__",
+    "cover:local": "istanbul cover ./node_modules/mocha/bin/_mocha ./__tests__",
+    "cover:local:open": "node ./scripts/coverage-report-open.js",
+    "deps:status": "david",
     "lint": "",
     "stats": "cloc . --exclude-dir=node_modules,tmp,.git",
     "test": "./node_modules/.bin/mocha ./__tests__",
     "test:unit": "./node_modules/.bin/mocha ./__tests__/unit.js",
-    "test:detection": "./node_modules/.bin/mocha ./__tests__/detection"
+    "test:detection": "./node_modules/.bin/mocha ./__tests__/detection",
+    "travis:test": "npm run cover:min"
   },
   "repository": {
     "type": "git",
@@ -44,18 +47,19 @@
     "bowser": "^1.7.3",
     "chai": "^4.1.2",
     "cloc": "^2.2.0",
-    "coveralls": "^2.13.1",
+    "coveralls": "^3.0.0",
+    "david": "^11.0.0",
     "eslint": "^4.7.2",
     "istanbul": "^0.4.5",
     "lodash.random": "^3.2.0",
     "mobile-detect": "^1.3.7",
-    "mocha": "^3.5.3",
+    "mocha": "^4.0.1",
     "opn": "^5.1.0",
     "platform": "^1.3.4",
     "rollup": "^0.50.0",
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-uglify": "^2.0.1",
-    "sinon": "^3.2.1",
+    "sinon": "^4.0.1",
     "ua-parser-js": "^0.7.14",
     "uglify-es": "^3.1.1"
   }
