--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bowser": "^1.7.3",
     "chai": "^4.1.2",
     "cloc": "^2.2.0",
+    "codecov.io": "^0.1.6",
     "coveralls": "^3.0.0",
     "david": "^11.0.0",
     "eslint": "^4.7.2",
