--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "description": "An experimental generator-based browser/os/bot detector with proxied API",
   "main": "lib/rowser.js",
   "scripts": {
+    "appveyor:benchmark": "",
     "appveyor:test": "node node_modules\\mocha\\bin\\mocha --max-old-space-size=4096 ./__tests__",
     "benchmark": "node ./benchmark/index.js",
     "build": "rollup -c",
     "build:open": "node ./scripts/index-page-open.js",
+    "circleci:test": "node node_modules/mocha/bin/mocha --max-old-space-size=4096 ./__tests__",
+    "circleci:lint": "",
     "cover": "node --max-old-space-size=4096 --harmony ./node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- ./__tests__",
     "cover:min": "node --max-old-space-size=4096 --harmony ./node_modules/istanbul/lib/cli.js cover --report lcovonly node_modules/mocha/bin/_mocha -- ./__tests__",
     "cover:local": "istanbul cover ./node_modules/mocha/bin/_mocha ./__tests__",
     "cover:local:open": "node ./scripts/coverage-report-open.js",
+    "deps:security": "nsp check --output summary",
     "deps:status": "david",
     "lint": "",
     "stats": "cloc . --exclude-dir=node_modules,tmp,.git",
     "test": "./node_modules/.bin/mocha ./__tests__",
     "test:unit": "./node_modules/.bin/mocha ./__tests__/unit.js",
     "test:detection": "./node_modules/.bin/mocha ./__tests__/detection",
+    "travis:benchmark": "",
+    "travis:lint": "",
     "travis:test": "npm run cover:min"
   },
   "repository": {
@@ -40,7 +46,7 @@
   "bugs": {
     "url": "https://github.com/everget/rowser/issues"
   },
-  "homepage": "https://github.com/everget/rowser#readme",
+  "homepage": "https://github.com/everget/rowser",
   "dependencies": {},
   "devDependencies": {
     "benchmark": "^2.1.4",
@@ -55,6 +61,7 @@
     "lodash.random": "^3.2.0",
     "mobile-detect": "^1.3.7",
     "mocha": "^4.0.1",
+    "nsp": "^2.8.1",
     "opn": "^5.1.0",
     "platform": "^1.3.4",
     "rollup": "^0.50.0",
