--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.2.0",
   "description": "An experimental generator-based browser/os/bot detector with proxied API",
   "main": "lib/rowser.js",
+  "module": "lib/rowser.js",
   "scripts": {
+    "start": "npm run build:dev && npm run build:dev-server",
     "appveyor:benchmark": "",
     "appveyor:test": "node node_modules\\mocha\\bin\\mocha --max-old-space-size=4096 ./__tests__",
     "benchmark": "node ./benchmark/index.js",
-    "build": "rollup -c",
-    "build:open": "node ./scripts/index-page-open.js",
+    "build:dev": "webpack",
+    "build:dev-server": "webpack-dev-server --hot --inline --open",
+    "build:production": "webpack -p --env.NODE_ENV=production",
     "circleci:test": "node node_modules/mocha/bin/mocha --max-old-space-size=4096 ./__tests__",
     "circleci:lint": "",
     "cover": "node --max-old-space-size=4096 --harmony ./node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- ./__tests__",
@@ -49,26 +52,33 @@
   "homepage": "https://github.com/everget/rowser",
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "benchmark": "^2.1.4",
     "bowser": "^1.7.3",
     "chai": "^4.1.2",
+    "clean-webpack-plugin": "^0.1.17",
     "cloc": "^2.2.0",
     "codecov.io": "^0.1.6",
     "coveralls": "^3.0.0",
+    "css-loader": "^0.28.7",
     "david": "^11.0.0",
     "eslint": "^4.7.2",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "html-webpack-plugin": "^2.30.1",
     "istanbul": "^0.4.5",
-    "lodash.random": "^3.2.0",
-    "mobile-detect": "^1.3.7",
     "mocha": "^4.0.1",
     "nsp": "^2.8.1",
     "opn": "^5.1.0",
     "platform": "^1.3.4",
-    "rollup": "^0.50.0",
-    "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-uglify": "^2.0.1",
     "sinon": "^4.0.1",
+    "style-loader": "^0.19.0",
     "ua-parser-js": "^0.7.14",
-    "uglify-es": "^3.1.1"
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
   }
 }
