--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "url": "https://github.com/everget/rowser/issues"
   },
   "homepage": "https://github.com/everget/rowser",
-  "dependencies": {},
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -74,6 +77,7 @@
     "opn": "^5.1.0",
     "platform": "^1.3.4",
     "sinon": "^4.0.1",
+    "snap-shot": "^2.17.0",
     "style-loader": "^0.19.0",
     "ua-parser-js": "^0.7.14",
     "uglifyjs-webpack-plugin": "^0.4.6",
