--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rowser",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "An experimental generator-based browser/os/bot detector with proxied API",
   "main": "lib/rowser.js",
   "module": "lib/rowser.js",
@@ -10,8 +10,8 @@
     "appveyor:test": "node node_modules\\mocha\\bin\\mocha --max-old-space-size=4096 ./__tests__",
     "benchmark": "node ./benchmark/index.js",
     "build:dev": "webpack",
-    "build:dev-server": "webpack-dev-server --hot --inline --open",
     "build:production": "webpack -p --env.NODE_ENV=production",
+    "check:size": "size-limit",
     "circleci:test": "node node_modules/mocha/bin/mocha --max-old-space-size=4096 ./__tests__",
     "circleci:lint": "",
     "cover": "node --max-old-space-size=4096 --harmony ./node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- ./__tests__",
@@ -20,6 +20,7 @@
     "cover:local:open": "node ./scripts/coverage-report-open.js",
     "deps:security": "nsp check --output summary",
     "deps:status": "david",
+    "dev-server": "webpack-dev-server --hot --inline --open",
     "lint": "",
     "stats": "cloc . --exclude-dir=node_modules,tmp,.git",
     "test": "./node_modules/.bin/mocha ./__tests__",
@@ -50,6 +51,12 @@
     "url": "https://github.com/everget/rowser/issues"
   },
   "homepage": "https://github.com/everget/rowser",
+  "size-limit": [
+    {
+      "path": "./static/*.js",
+      "limit": "15kb"
+    }
+  ],
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0"
@@ -77,6 +84,7 @@
     "opn": "^5.1.0",
     "platform": "^1.3.4",
     "sinon": "^4.0.1",
+    "size-limit": "^0.11.6",
     "snap-shot": "^2.17.0",
     "style-loader": "^0.19.0",
     "ua-parser-js": "^0.7.14",
