--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "deps:security": "nsp check --output summary",
     "deps:status": "david",
     "dev-server": "webpack-dev-server --hot --inline --open",
-    "lint": "",
+    "lint": "./node_modules/.bin/eslint ./lib --fix",
+    "lint-staged": "lint-staged",
     "stats": "cloc . --exclude-dir=node_modules,tmp,.git",
     "test": "./node_modules/.bin/mocha ./__tests__",
     "test:unit": "./node_modules/.bin/mocha ./__tests__/unit.js",
     "test:detection": "./node_modules/.bin/mocha ./__tests__/detection",
-    "travis:benchmark": "",
     "travis:lint": "",
     "travis:test": "npm run cover:min"
   },
@@ -57,15 +57,13 @@
       "limit": "15kb"
     }
   ],
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "babel-runtime": "^6.26.0"
+  "lint-staged": {
+    "*.js": "./node_modules/.bin/eslint --fix"
   },
+  "pre-commit": "lint-staged",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
     "benchmark": "^2.1.4",
     "bowser": "^1.8.0",
     "chai": "^4.1.2",
@@ -75,20 +73,24 @@
     "coveralls": "^3.0.0",
     "css-loader": "^0.28.7",
     "david": "^11.0.0",
-    "eslint": "^4.7.2",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-mocha": "^4.11.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^2.30.1",
     "istanbul": "^0.4.5",
+    "lint-staged": "^4.3.0",
     "mocha": "^4.0.1",
     "nsp": "^2.8.1",
     "opn": "^5.1.0",
     "platform": "^1.3.4",
-    "sinon": "^4.0.1",
+    "pre-commit": "^1.2.2",
     "size-limit": "^0.11.6",
     "snap-shot": "^2.17.0",
     "style-loader": "^0.19.0",
     "ua-parser-js": "^0.7.14",
-    "uglifyjs-webpack-plugin": "^0.4.6",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
